# warren

./: .gitignore  Cargo.toml  README.md  install.sh  warren-v1-notes.md
src/: cli.rs  hooks.rs  main.rs  names.rs  paths.rs  proto.rs  sessions.rs  spans.rs
src/daemon/: client.rs  mod.rs  term.rs
src/dash/: conn.rs  forms.rs  input.rs  mod.rs  render.rs
tests/: daemon_attach.rs
