[package]
name = "warren"
version = "1.0.0-dev"
edition = "2024"
description = "Claude Code agent multiplexer: per-agent daemons + a stateless dashboard"

[dependencies]
alacritty_terminal = "0.26"
anyhow = "1"
libc = "0.2"
polling = "3"
rustix = { version = "1", features = ["pty", "process", "termios", "event", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
