[package]
name = "warren"
version = "1.0.0"
edition = "2024"
description = "A meta-harness for Claude Code: run a colony of agents from one dashboard"
license = "GPL-3.0-only"
repository = "https://github.com/samuelmarquis/warren"
readme = "README.md"

[dependencies]
alacritty_terminal = "0.26"
anyhow = "1"
libc = "0.2"
polling = "3"
rustix = { version = "1", features = ["pty", "process", "termios", "event", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
